@@ -7,7 +7,7 @@ iso8601 = 0.1.4
 PyMeta = 0.5.0
 pytz = 2010o
 setuptools = 0.6c11
-testtools = 0.9.11
+testtools = 0.9.15
 zc.recipe.egg = 1.3.2
 z3c.recipe.filetemplate = 2.1.0
 z3c.recipe.scripts = 1.0.1
